Closed Bug 312097 Opened 19 years ago Closed 19 years ago

[FIX]Pages with frames and JS alert fail to render FF 1.5b2

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8rc1

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

()

Details

(Keywords: fixed1.8, regression, testcase)

Attachments

(2 files)

Blocks: 253951
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b5) Gecko/20051011
Firefox/1.4.1 ID:2005101113

Same for Branch
Attached patch FixSplinter Review
Attachment #199224 - Flags: review?
Comment on attachment 199224 [details] [diff] [review]
Fix

This is just a copy of what we do for <body>.  The real issue is that OpenHTML
and CloseHTML do nothing of the sort, so we never actually notify on the kids
of <html> through the normal codepath!	This used to work, sorta, because
StartLayout() didn't happen till we hit CloseFrameset(), but that's no longer
true.
Attachment #199224 - Flags: superreview?(jst)
Attachment #199224 - Flags: review?(bugmail)
Attachment #199224 - Flags: review?
Assignee: general → bzbarsky
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: Pages with frames and JS alert fail to render FF 1.5b2 → [FIX]Pages with frames and JS alert fail to render FF 1.5b2
Target Milestone: --- → mozilla1.8rc1
Requesting blocking; I think it's worth getting this regression fixed...
Flags: blocking1.8rc1?
Flags: blocking1.8rc1? → blocking1.8rc1+
Comment on attachment 199224 [details] [diff] [review]
Fix

sr=jst
Attachment #199224 - Flags: superreview?(jst) → superreview+
Attachment #199224 - Flags: approval1.8rc1?
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
To expand on that approval request, this should be fairly safe -- we've been
using this exact code for <body> for ages, and the only reason we didn't use it
for <frameset> was because it wasn't strictly necessary.  Now it is.
Attachment #199224 - Flags: approval1.8rc1? → approval1.8rc1+
Fixed on branch.
Keywords: fixed1.8
Depends on: 312942
Attached file Testcase
Blocks: 311785
It looks like on trunk this got busted by the checkin for bug 311785; I'll try to refix it in bug 315369, probably.
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: