Make sure to notify for frameset like we do for body.  Bug 312097, r=sicking, sr=jst